--- a/src/index.scss
+++ b/src/index.scss
@@ -4,8 +4,10 @@
 
 .list-group {
   margin-top: 5px;
-  width: 50%;
+  width: 20%;
 }
+
+
 
 .card {
   padding: 0;
@@ -15,6 +17,10 @@
   min-height: 700px;
 }
 
+.pageTitle {
+  margin-top: 20px;
+}
+
 .card h2 {
   display: block;
   background-color: rgba(0,0,0,0.5);
@@ -22,10 +28,15 @@
   margin: 0;
   min-height: 60px;
   width: 100%;
+  color: white;
   cursor: pointer;
     &:hover {
-      color: white
+      color: gray;
     }
+}
+
+h3 {
+  color: gray;
 }
 
 p {
@@ -39,5 +50,66 @@ p {
 }
 
 #description {
+  cursor: pointer;
+  background-color: black;
+}
+
+.card-min {
+  max-width: 370px;
+}
+
+.query-body{
+  background-color: rgba(0,0,0,0.5);
+  width: 25%;
+  margin-top: 10px;
+  min-width: 150px;
+}
+
+.like {
+  background: white;
+  width: 15%;
+  min-width: 150px;
+  font-size: 20px;
+  margin-top: 10px;
+  margin-left: 10px;
+  border-radius: 10px;
+  &:hover{
+    background-color: black;
+  }
+}
+
+.favorites{
+  display: block;
+  background-color: white;
+  border: 1px black solid;
+  border-radius: 4px;
+  padding: 10px;
+  width: 150px;
+  margin-top: 20px;
+  cursor: pointer;
+    &:hover{
+      background-color: black;
+      color: white;
+    }
+}
+
+.favorites-list{
+  list-style: none;
+  margin-top: 10px;
+  padding: 10px;
+  background-color: black;
+  color:white;
+  min-width: 200px;
+}
+
+.favTitle {
+ display: inline-block;
+ margin-left: 10px;
+ cursor: pointer;
+}
+
+.favRemove {
+  display: inline-block;
+  margin-left: 10px;
   cursor: pointer;
 }
