--- a/src/index.scss
+++ b/src/index.scss
@@ -83,7 +83,7 @@ p {
   border: 1px black solid;
   border-radius: 4px;
   padding: 10px;
-  width: 150px;
+  width: 100px;
   margin-top: 20px;
   cursor: pointer;
     &:hover{
@@ -135,4 +135,32 @@ p {
 
 .hoverContent {
   background: no-repeat;
+}
+
+.gallery-min-pic {
+  border: 1px solid white;
+  margin-left: 10px;
+  margin-top: 10px;
+  min-width: 70px;
+  max-width: 80px;
+  min-height: 50px;
+  max-height: 55px;
+  filter: brightness(0.5);
+  cursor: pointer;
+   &:hover {
+     filter: brightness(1);
+     border: 1px solid white;
+     transform: scale(1.1);
+   }
+}
+
+#popup-img {
+  position: fixed;
+  display: none;
+  width: 100%;
+  min-height: 600px;
+  border: 5px solid white;
+  margin-top: 10px;
+  z-index: 100;
+  box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
 }
