--- a/src/index.scss
+++ b/src/index.scss
@@ -9,6 +9,7 @@
 
 .card {
   padding: 0;
+  border: 0px;
 }
 
 .query-card {
@@ -22,6 +23,8 @@
 .card h2 {
   display: block;
   background-color: rgba(0,0,0,0.5);
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px;
   padding: 10px;
   margin: 0;
   min-height: 60px;
@@ -44,6 +47,8 @@ p {
 .genres {
   margin: 0;
   background-color: rgba(0,0,0,0.5);
+  border-bottom-right-radius: 7px;
+  border-bottom-left-radius: 7px;
   padding-left: 10px;
 }
 
@@ -53,9 +58,7 @@ p {
   overflow: auto;
 }
 
-.card-min {
-  max-width: 370px;
-}
+
 
 .query-body{
   background-color: rgba(0,0,0,0.5);
@@ -139,12 +142,13 @@ p {
 
 .gallery-min-pic {
   border: 1px solid white;
+  border-radius: 2px;
   margin-left: 10px;
   margin-top: 10px;
-  min-width: 70px;
-  max-width: 80px;
-  min-height: 50px;
-  max-height: 55px;
+  min-width: 80px;
+  max-width: 100px;
+  min-height: 65px;
+  max-height: 70px;
   filter: brightness(0.5);
   cursor: pointer;
    &:hover {
@@ -163,4 +167,23 @@ p {
   margin-top: 10px;
   z-index: 100;
   box-shadow: 5px 5px 5px rgba(0,0,0,0.2);
+}
+
+.favoriteCard{
+  max-height: 500px
+}
+
+.card-min {
+  max-width: 370px;
+  border-radius: 7px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+   &:hover{
+     transform: scale(1.01);
+     box-shadow: 3px 3px 3px rgba(0,0,0,0.2);
+   }
+}
+
+.gallery-list{
+  list-style: none;
 }
